[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GameScene.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons.tres" type="Theme" id=2]
[ext_resource path="res://assets/window.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/labels.tres" type="Theme" id=5]

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.211765, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMain" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 15
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxMain" type="VBoxContainer" parent="MarginMain"]
margin_left = 20.0
margin_top = 15.0
margin_right = 1004.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTitle" type="HBoxContainer" parent="MarginMain/VBoxMain"]
margin_right = 984.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ButtonMenu" type="Button" parent="MarginMain/VBoxMain/HBoxTitle"]
margin_top = 20.0
margin_right = 70.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 30 )
hint_tooltip = "Back to menu
(Resets level)"
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTLTitle" type="RichTextLabel" parent="MarginMain/VBoxMain/HBoxTitle"]
margin_left = 74.0
margin_right = 984.0
margin_bottom = 70.0
size_flags_horizontal = 7
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][color=aqua]TEST TUBES              [/color][/center]
"
text = "TEST TUBES              
"

[node name="ButtonRestart" type="Button" parent="MarginMain/VBoxMain/HBoxTitle"]
visible = false
margin_left = 30.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 90.0
rect_min_size = Vector2( 70, 30 )
hint_tooltip = "Restart level"
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountersCont" type="CenterContainer" parent="MarginMain/VBoxMain"]
margin_top = 74.0
margin_right = 984.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Counters" type="Label" parent="MarginMain/VBoxMain/CountersCont"]
margin_left = 492.0
margin_top = 8.0
margin_right = 492.0
margin_bottom = 31.0
hint_tooltip = "MOVES done and
poured VOLUME in portions"
mouse_filter = 1
size_flags_horizontal = 4
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessages" type="MarginContainer" parent="MarginMain/VBoxMain"]
margin_top = 118.0
margin_right = 984.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Message" type="Label" parent="MarginMain/VBoxMain/ErrorMessages"]
margin_top = 23.0
margin_right = 984.0
margin_bottom = 46.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTubes" type="MarginContainer" parent="MarginMain/VBoxMain"]
margin_top = 192.0
margin_right = 984.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridTubes" type="GridContainer" parent="MarginMain/VBoxMain/MarginTubes"]
margin_right = 984.0
margin_bottom = 294.0
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 20

[node name="Help" type="MarginContainer" parent="MarginMain/VBoxMain"]
margin_top = 490.0
margin_right = 984.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginMain/VBoxMain/Help"]
margin_right = 984.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Instruction" type="Label" parent="MarginMain/VBoxMain/Help/ScrollContainer"]
margin_right = 984.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishPopup" type="AcceptDialog" parent="."]
margin_right = 250.0
margin_bottom = 87.5
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
popup_exclusive = true
dialog_text = "Return to menu"
[connection signal="pressed" from="MarginMain/VBoxMain/HBoxTitle/ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="MarginMain/VBoxMain/HBoxTitle/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="confirmed" from="FinishPopup" to="." method="_on_FinishPopup_confirmed"]
